#15024 closed bug (fixed)
fifo_dequeue_buffer: Use of uninitialized lock
Reported by: | T.Knez | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1/beta2 |
Component: | Network & Internet/Stack | Version: | R1/Development |
Keywords: | Cc: | ||
Blocked By: | Blocking: | #14866 | |
Platform: | x86-64 |
Description
Hrev 53085 and 53086 have given me sporad kernel panics upon boot. It does not matter if it's a cold or warm boot, the issue can show itself regardless. This has never happend before on the machine. It has been rock solid running Haiku for at least the past year.
The computer in question is a Lenovo Thinkpad X61s running Haiku exclusively.
Output of listdev from the machine and a jpg picture of the kernel panic output is attached to this ticket.
Attachments (2)
Change History (12)
by , 6 years ago
Attachment: | image1.jpeg added |
---|
comment:1 by , 6 years ago
Component: | - General → Network & Internet/Stack |
---|---|
Owner: | changed from | to
Summary: | Kernel panic upon boot (network related) → fifo_dequeue_buffer: Use of uninitialized lock |
comment:2 by , 6 years ago
The device_consumer_thread creation occurs after init_fifo is called. So I'm really not sure how this would occur. Memory corruption, maybe?
comment:3 by , 6 years ago
hrev53085 is where I merged the new ipro1000 changes. So, maybe memory corruption indeed?
comment:4 by , 6 years ago
kallisti5 reports the TUN driver triggers this on a VM with virtio, so the ipro1000 changes are unlikely to be related.
comment:5 by , 6 years ago
Yeah, my (*early*) work on top of mmu_man's tun work seems to trigger on hrev53077.
- On Haiku...
- Apply https://kallisti5.keybase.pub/Patches/0001-network-tun-Early-work-at-tunconfig-create.patch to haiku sources
jam -q install-tun
tunconfig create
<same KDL>
comment:6 by , 6 years ago
I should mention tun isn't in the images yet, and I haven't changed anything core network kit / server at this time.
comment:8 by , 6 years ago
Resolution: | → fixed |
---|---|
Status: | new → closed |
comment:9 by , 6 years ago
Blocking: | 14866 added |
---|
comment:10 by , 5 years ago
Milestone: | Unscheduled → R1/beta2 |
---|
Assign tickets with status=closed and resolution=fixed within the R1/beta2 development window to the R1/beta2 Milestone
Picture of the kernel panic output